--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,160 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* Itim */
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+/* Inter */
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+@import 'flowbite/dist/flowbite.css';
+
+:roote {
+  --primary: #75ADD0,
+    --secondary: #BCD2E9,
+    --background: #E5E1EF,
+    --highlight: #e0a8cd,
+    --smothText: #5B5B5B,
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.mainTitle {
+  font-family: "Itim", cursive;
+  font-weight: 400;
+  font-size: 66px;
+  line-height: 48px;
+}
+
+@media (max-width: 768px) {
+  .mainTitle {
+    font-size: 56px;
+  }
+}
+
+@media (max-width: 480px) {
+  .mainTitle {
+    font-size: 48px;
+  }
+}
+
+.secondTitle {
+  font-family: "Itim", cursive;
+  font-weight: 500;
+  font-size: 38px;
+  line-height: 28px;
+}
+
+
+@media (max-width: 768px) {
+  .secondTitle {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 480px) {
+  .secondTitle {
+    font-size: 28px;
+  }
+}
+
+
+.paragraph {
+  color: var(--smothText);
+  font-family: "Inter", cursive;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: 1.5px;
+}
+
+.cardParagraph {
+  color: var(--smothText);
+  font-family: "Inter", cursive;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 25px;
+  letter-spacing: 1px;
+}
+
+.btn {
+  border-radius: 12px;
+  padding: 8px 12px;
+  border: 0;
+}
+
+.shape {
+  /* border-radius: 57% 43% 70% 30% / 48% 79% 21% 52% ; */
+  border-radius: 56% 44% 53% 47% / 62% 72% 28% 38%;
+}
+
+.cr {
+  cursor: pointer;
+}
+
+.active {
+  border-bottom: 1px solid #ffffff;
+}
+
+.wave {
+  display: inline-block;
+  transform-origin: 70% 70%;
+  animation: waveHand 2s infinite;
+}
+
+@keyframes waveHand {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  10% {
+    transform: rotate(14deg);
+  }
+
+  20% {
+    transform: rotate(-8deg);
+  }
+
+  30% {
+    transform: rotate(14deg);
+  }
+
+  40% {
+    transform: rotate(-4deg);
+  }
+
+  50% {
+    transform: rotate(10deg);
+  }
+
+  60%,
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.slideInLeft {
+  opacity: 0;
+  transform: translateX(-40px);
+  animation: slideIn 1s ease forwards;
+}
+
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateX(-40px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.icon {
+  top: -6%;
+  left: -6%;
+}
